k8s/polybot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
  namespace: ezdeharj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-microservice
  template:
    metadata:
      labels:
        app: polybot-microservice
    spec:
      containers:
      - name: polybot-container
        image: 933060838752.dkr.ecr.us-east-1.amazonaws.com/ezdehar-polybot-img:v3-3-1707214518682
        ports:
        - containerPort: 8443

        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "80m"
