k8s/yolo5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-deployment
  namespace: ezdeharj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5-microservice
  template:
    metadata:
      labels:
        app: yolo5-microservice
    spec:
      containers:
      - name: yolo5-container
        image: 933060838752.dkr.ecr.us-east-1.amazonaws.com/ezdehar-yolo5-img:v78-78-1707176111481
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
