k8s/yolo5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo5-service
  namespace: ezdeharj
spec:
  selector:
    app: yolo5-microservice
  ports:
    - protocol: TCP
      port: 8081 # Match the port the container listens on
      targetPort: 8081 # Match the container port
  type: ClusterIP # ClusterIP for internal communication within the cluster
