k8s/polybot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  namespace: ezdeharj
  labels:
    env: dev
    release: v1.0
spec:
  tls:
  - hosts:
    - ezdeharbot.atech-bot.click
    secretName: polybot-tls-secret
  rules:
  - host: ezdeharbot.atech-bot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot-service
            port:
              number: 8443
  ingressClassName: nginx
